# OPerating-systems-project-2

./: CMakeLists.txt  README.md
Client/: ChatClient.cpp  ChatClient.h  ServerListener.cpp  ServerListener.h
Common/: Message.cpp  Message.h  Protocol.h
Server/: ChatServer.cpp  ChatServer.h  ClientHandler.cpp  ClientHandler.h  MessageLogger.cpp  MessageLogger.h  UserManager.cpp  UserManager.h
